--- a/Makefile.in
+++ b/Makefile.in
@@ -269,14 +269,20 @@ vc: prereqs $(VCSOLUTION) $(ALLTCLINDEXES)
 $(VCSOLUTION): $(ALLVCPROJECTS)
 	@echo -e "Microsoft Visual Studio Solution File, Format Version 8.00$(foreach project,$^,\nProject(\"{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}\") = \"$(basename $(notdir $(project)))\", \"$(project)\", \"{$($(project)_ID)}\"\n\tProjectSection(ProjectDependencies) = postProject$(foreach dep,$($(project)_PROJ_DEPS),\n\t\t{$($(dep)_ID)} = {$($(dep)_ID)}PPPPP)\n\tEndProjectSection\nEndProject)\nGlobal\n\tGlobalSection(SolutionConfiguration) = preSolution\n\t\t$(CONF_NAME) = $(CONF_NAME)\n\tEndGlobalSection\n\tGlobalSection(ProjectConfiguration) = postSolution$(foreach project,$^,\n\t\t{$($(project)_ID)}.$(CONF_NAME).ActiveCfg = $(CONF_NAME)|Win32\n\t\t{$($(project)_ID)}.$(CONF_NAME).Build.0 = $(CONF_NAME)|Win32PPPPP)\n\tEndGlobalSection\n\tGlobalSection(ExtensibilityGlobals) = postSolution\n\tEndGlobalSection\n\tGlobalSection(ExtensibilityAddIns) = postSolution\n\tEndGlobalSection\nEndGlobal" | sed 's,PPPPP ,,g' | sed 's,PPPPP,,g' > $@
 
+#########################################################################################################
+# Targets for regression testing...
+
+gold_standards :
+	@mkdir -p $(OBJTOP_ABS)/TestData;                    \
+         cd $(OBJTOP_ABS)/TestData;                          \
+	 components=`$(SRCTOP_ABS)/R_Tester/helpers/selectComponents.sh $(SRCTOP_ABS)/R_Tester`; \
+	 if test "$$?" == 0; then                            \
+            export PYTHONPATH="$(SRCTOP_ABS)/R_Tester/toplevel:$(SRCTOP_ABS)/R_Tester"; \
+            $(SRCTOP)/R_Tester/toplevel/generateGoldStandards.py -b $(OBJTOP_ABS) -s $(SRCTOP_ABS) $$components -j $(MAKE_PARALLELISM) -v; \
+         fi
+
 #__________________________________
 #  to execute the local regression tester
 runLocalRT:
-	@echo ""
-	@echo ""
-	@echo "Now running local regression tester"
-	@echo "____________________________________"       
-	cd $(OBJTOP_ABS)
-	$(SRCTOP)/R_Tester/toplevel/startLocalTest $(OBJTOP_ABS)
-	@echo "____________________________________"
-	@echo ""
+	@cd $(OBJTOP_ABS)
+	@$(SRCTOP)/R_Tester/toplevel/startLocalTest $(OBJTOP_ABS)
